Fixed color contrast issue in add new dataset page

--- a/ckan/public/base/css/main.css
+++ b/ckan/public/base/css/main.css
@@ -11950,7 +11950,6 @@ select[data-module=autocomplete] {
 }
 
 .editor .editor-info-block a {
-  color: #187794;
   text-decoration: none;
 }
 
